@@ -1,3 +1,10 @@
+2023-09-18  Bruno Haible  <bruno@clisp.org>
+
+	Fix shared library support on Android.
+	Patch from <https://savannah.gnu.org/patch/index.php?10393>.
+	* m4/libtool.m4: On Android, fix library_names_spec and
+	hardcode_libdir_flag_spec.
+
 2023-09-16  Bruno Haible  <bruno@clisp.org>
 
 	Fix a misnomer.
